2002-01-21  Anders Carlsson  <andersca@gnu.org>

	* main.c: Get the theme name right.

	* control/control.c (create_form): Use a GtkTreeView instead of a
	clist.

2002-01-21  Richard Hestilow  <hestilow@ximian.com>

	* Complete rewrite.

2002-01-14  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Update

2002-01-04  Bradford Hovinen  <hovinen@ximian.com>

	* control/Makefile.am (gnome_theme_preview_LDADD): Use
	$(CONTROL_{CFLAGS|LIBS}) rather than @CONTROL_{CFLAGS|LIBS}@

2001-12-08  Richard Hestilow  <hestilow@ximian.com>
	
	* Port to GConf.

2001-12-08  Richard Hestilow  <hestilow@ximian.com>

	* Partial revamp to use bonobo control instead of bug-prone
	custom socket; also port away from libcapplet.

2001-10-13  Bradford Hovinen  <hovinen@ximian.com>

	* lister.c (edit_file_to_use): Be paranoid about what we have read
	from the input file -- make sure the string is always
	NULL-terminated

2001-09-29  Richard Hestilow  <hestilow@ximian.com>

	* gui.c (sort_alpha): Use g_strcasecmp, not strcmp.
	Fixes bug #13539.

2001-09-29  Richard Hestilow  <hestilow@ximian.com>

	* lister.c: (list_themes, list_system_themes, list_user_themes):
	Return a GList of ThemeEntry*, and remove extraneous number argument.
	Also, use g_strdup_printf instead of g_snprintf.
	
	* da.h (ThemeEntry): Add a "row" data member.
	* gui.c: Change variables current_theme, current_global_theme,
	initial_theme, and last_theme to ThemeEntry*.
	(make_main): Change GtkList to a GtkCList to avoid scrolling bug.
	(click_entry): Changed to "select_row" callback prototype.
	(delete_entry): Removed.
	(item_destroy_notify): Added in lieu of delete_entry.
	(sort_alpha): Accept ThemeEntry* and not GtkBin*.
	(add_theme_list): Added.
	(update_theme_entries): Use clist functions.
	
2001-07-27  Bradford Hovinen  <hovinen@ximian.com>

	* RELEASE : 1.5.2

2001-07-27  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Remove empty SUBDIRS line

2001-07-20  Chema Celorio  <chema@celorio.com>
